--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "type": "git",
     "url": "git://github.com/dominictarr/pull-mux-demux.git"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "tape": "~2.13.2"
   },
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
   "author": "Dominic Tarr <dominic.tarr@gmail.com> (http://dominictarr.com)",
-  "license": "MIT"  
+  "license": "MIT"
 }
